--- a/CategoryProduct/Views/Categories/Delete.cshtml
+++ b/CategoryProduct/Views/Categories/Delete.cshtml
@@ -32,7 +32,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Picture)
+            @Html.Partial("_ShowPhotoPartial");
         </dd>
 
     </dl>
