--- a/CategoryProduct/Views/Categories/Details.cshtml
+++ b/CategoryProduct/Views/Categories/Details.cshtml
@@ -31,7 +31,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Picture)
+            @Html.Partial("_ShowPhotoPartial");
         </dd>
 
     </dl>
