--- a/CategoryProduct/Views/Categories/Edit.cshtml
+++ b/CategoryProduct/Views/Categories/Edit.cshtml
@@ -7,10 +7,10 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Categories", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Categories</h4>
         <hr />
@@ -36,8 +36,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Picture, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Picture, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Picture, "", new { @class = "text-danger" })
+                @Html.Partial("_ShowPhotoPartial");
+                <input type="file" name="File1" id="File1" accept="image.*" />
             </div>
         </div>
 
@@ -55,4 +55,8 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/site.js"></script>
+    <script>
+        $("#File1").change(function () { readURL(this,$("#File1").prev())});
+    </script>
 }
