--- a/CategoryProduct/Views/Categories/Index.cshtml
+++ b/CategoryProduct/Views/Categories/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            <img src="@Url.Action("ShowPhoto", "Categories", new {id=item.CategoryID})" title="@Html.DisplayFor(model=>item.CategoryName)"/>
+            @Html.Partial("_ShowPhotoPartial",item);
             @*@Html.DisplayFor(modelItem => item.Picture)*@
         </td>
         <td>
